# Pre-project-transformer

./: .gitignore  Makefile  README.md  base_model.py  clean_data.ipynb  constants.py  dataset.py  dataset_exploration.ipynb  deep_feed_forward_model.py  dropout_as_bayesian_approximation_first_test.ipynb  embedding.py  get_data.py  logistics_regression_model.py  main.py  pre_process_data.py  preprocess_data.py  preprocessing.py  pyproject.toml  transformer_config.py
figures_for_report/: overlapping.ipynb  overleaf_down.txt
mc_dropout/: dropout_as_bayesian_approximation.ipynb
models/: base_model.py  deep_feed_forward_model.py  logistics_regression_model.py  transformer_encoder.py  transormer_encoder_model.py
p2p_lending/: .gitignore  constants.py  create_dummy_dataset.ipynb  dataset.py  dataset_exploration.ipynb  dropout_as_bayesian_approximation.ipynb  embedding.py  get_data.py  main.py  preprocess_data.py  test.ipynb  transformer_config.py  visualize_resutls.ipynb
p2p_lending/models/: base_model.py  deep_feed_forward_model.py  logistics_regression_model.py  transformer_encoder.py  transormer_encoder_model.py
p2p_lending/report_results/: runs.ipynb
p2p_lending/report_results/plots/: TE_AEU_1.html  TE_AEU_1t.html  TE_AEU_2t.html  TE_AU1.html  TE_AU_1.html  TE_AU_1t.html  TE_AU_4.html  TE_AU_4t.html  TE_AU_5.html  TE_AU_5t.html  TE_EU_5.html  TE_EU_5t.html
p2p_lending/report_results/plots/no_sigmoid/: TE_ns_AEU1t.html  TE_ns_AEU3t.html  TE_ns_AEU4t.html  (+1 more)
p2p_lending/utils/: bool_string.py  dataset.py  loss_attenuation.py  mc_dropout.py
utils/: dataset.py
(+1 files in other folders)
