[tool.poetry]
name = "p2p_lending"
version = "0.1.0"
description = "Pre project for the master thesis on uncertainty quantification in LLM's"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.0"
pandas = "^2.0.0"
torch = "2.2.1"
scikit-learn = "^1.3.0"
tqdm = "^4.65.0"
nltk = "^3.8.1"
pydantic = "^2.0.0"
pyarrow = "^18.0.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
matplotlib = "^3.7.0"
debugpy = "^1.6.7"
mypy = "^1.8.0"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
disallow_untyped_calls = true
disallow_any_generics = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 